--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Netflix Clone</title>
+  <title>Netflix Clone v2</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,32 +24,46 @@
     <div class="hero-text">
       <h1>Unlimited movies, TV shows, and more.</h1>
       <p>Watch anywhere. Cancel anytime.</p>
-      <button class="btn">Watch Now</button>
+      <button class="btn">Join Now</button>
     </div>
   </section>
 
-  <!-- Movie Rows -->
+  <!-- Movie Sections -->
   <section class="movies">
     <h2>Popular on Netflix</h2>
     <div class="row">
-      <img src="https://picsum.photos/200/300?random=1" alt="Movie 1">
-      <img src="https://picsum.photos/200/300?random=2" alt="Movie 2">
-      <img src="https://picsum.photos/200/300?random=3" alt="Movie 3">
-      <img src="https://picsum.photos/200/300?random=4" alt="Movie 4">
+      <div class="card"><img src="https://picsum.photos/200/300?random=11" alt=""></div>
+      <div class="card"><img src="https://picsum.photos/200/300?random=12" alt=""></div>
+      <div class="card"><img src="https://picsum.photos/200/300?random=13" alt=""></div>
+      <div class="card"><img src="https://picsum.photos/200/300?random=14" alt=""></div>
     </div>
 
     <h2>Trending Now</h2>
     <div class="row">
-      <img src="https://picsum.photos/200/300?random=5" alt="Movie 5">
-      <img src="https://picsum.photos/200/300?random=6" alt="Movie 6">
-      <img src="https://picsum.photos/200/300?random=7" alt="Movie 7">
-      <img src="https://picsum.photos/200/300?random=8" alt="Movie 8">
+      <div class="card"><img src="https://picsum.photos/200/300?random=15" alt=""></div>
+      <div class="card"><img src="https://picsum.photos/200/300?random=16" alt=""></div>
+      <div class="card"><img src="https://picsum.photos/200/300?random=17" alt=""></div>
+      <div class="card"><img src="https://picsum.photos/200/300?random=18" alt=""></div>
+    </div>
+
+    <h2>Top Rated</h2>
+    <div class="row">
+      <div class="card"><img src="https://picsum.photos/200/300?random=19" alt=""></div>
+      <div class="card"><img src="https://picsum.photos/200/300?random=20" alt=""></div>
+      <div class="card"><img src="https://picsum.photos/200/300?random=21" alt=""></div>
+      <div class="card"><img src="https://picsum.photos/200/300?random=22" alt=""></div>
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="footer">
-    <p>Netflix Clone made for Git & GitHub Practice © 2025</p>
+    <div class="footer-links">
+      <a href="#">FAQ</a>
+      <a href="#">Help Center</a>
+      <a href="#">Terms of Use</a>
+      <a href="#">Privacy</a>
+    </div>
+    <p>Netflix Clone v2 for Git & GitHub Practice © 2025</p>
   </footer>
 </body>
 </html>
